--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <ul data-role="listview" data-theme="a">
       <li><a href="#buy" data-transition="slide">Buy</a></li>
       <li><a href="#sell" data-transition="slide">Sell</a></li>
-      <li><a href="#profile" data-transition="slide">Profile</a></li>
+<!--      <li><a href="#profile" data-transition="slide">Profile</a></li>-->
       <li><a href="#account" data-transition="slide">Account</a></li>
-      <li><a href="#settings" data-transition="slide">Settings</a></li>
+<!--      <li><a href="#settings" data-transition="slide">Settings</a></li>-->
     </ul>
   </div>
   <div data-role="footer" data-theme="a">
@@ -36,12 +36,12 @@
   </div>
   <div data-role="content">
     <h3>Products</h3>
-    <ul>
-      <li>Product 1</li>
-      <li>Product 2</li>
-      <li>Product 3</li>
-      <li>Product 4</li>
-      <li>Product 5</li>
+    <ul data-role="listview" data-theme="a">
+	  <li><a href="#proddetails" data-transition="slide">Product 1</a></li>
+      <li><a>Product 2</a></li>
+      <li><a>Product 3</a></li>
+      <li><a>Product 4</a></li>
+      <li><a>Product 5</a></li>
     </ul>
   </div>
   <div data-role="footer">
@@ -119,5 +119,28 @@
     <h4>BuyQwik &copy; 2017</h4>
   </div>
 </div>
+<div data-role="page" id="proddetails">
+  <div data-role="header" data-theme="a" data-add-back-btn="true">
+    <h1>Product Details</h1>
+  </div>
+  <div data-role="content">
+   <div>
+   	<p>Test Product</p>
+   </div>
+    <div>
+   	<p>Condition: New</p>
+   </div>
+   <div>
+   	<p>Description: </p>
+   </div>
+   <div>
+   	<input type="button" value="Add To Cart">
+   </div>
+  </div>
+  <div data-role="footer" data-theme="a">
+    <h4>BuyQwik &copy; 2017</h4>
+  </div>
+</div>
+
 </body>
 </html>
